Centered progress bar

--- a/views/detriments.handlebars
+++ b/views/detriments.handlebars
@@ -35,14 +35,18 @@
           {{/each}}
 
     </div>
-    <div class="progBar column">
-      <h3>Step 2: Options</h3>
-      <div class="ui blue big progress" data-percent="90" id="progBar">
+</div>
+<div class="ui two column stackable padded centered grid">
+  <div class="column">  
+      <h3>Step 4: Detriments</h3>    
+      <div class="ui violet big progress" data-percent="90" id="progBar">
         <div class="bar"></div>
         <div class="label">Progress</div>
       </div>
     </div>
-  </div>
+</div>
+
+  
 
 <script type="text/javascript">
 
