--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -10,14 +10,17 @@
 			<button type="submit" class="ui huge blue button">Go<i class="long arrow right icon"></i></button>
 		</form>
 	</div>
+</div>
+<div class="ui two column stackable padded centered grid">
  	<div class="column">
+ 	  <h3>Step 1: The Problem</h3>	
       <div class="ui violet big progress" data-percent="20" id="progBar">
         <div class="bar"></div>
         <div class="label">Progress</div>
       </div>
     </div>
-  </div>
 </div>
+
 <script type="text/javascript">
 $(document).ready(function(){
 	$('#progBar').progress();
