--- a/views/score.handlebars
+++ b/views/score.handlebars
@@ -13,32 +13,42 @@
 
 			</div>
 			<div id="otherScoreBox">
-			<ul class="ui list">
-			{{#each options}}
-			<div class="resultDiv" name="{{this.option}}">
-				<h3><b><li>{{this.option}}</li></b></h3>
-				<input type="hidden" class="optionName" value={{this.option}}>
-				<h4 class="otherScore"><a><b>Score: <span class="resultSpan"></span></b></a></h4>
-				{{#each this.Benefits}}
-				<input type="hidden" class="benefitName" value={{this.benefit}}>
-				<input type="hidden" class="benefitWeight" value={{this.weight}}> 
+				<ul class="ui list">
+				{{#each options}}
+				<div class="resultDiv" name="{{this.option}}">
+					<h3><b><li>{{this.option}}</li></b></h3>
+					<input type="hidden" class="optionName" value={{this.option}}>
+					<h4 class="otherScore"><a><b>Score: <span class="resultSpan"></span></b></a></h4>
+					{{#each this.Benefits}}
+					<input type="hidden" class="benefitName" value={{this.benefit}}>
+					<input type="hidden" class="benefitWeight" value={{this.weight}}> 
+					{{/each}}
+					{{#each this.Detriments}}
+					<input type="hidden" class="detrimentName" value={{this.detriment}}>
+					<input type="hidden" class="detrimentWeight" value={{this.weight}}>
+					{{/each}}
+				</div>	
 				{{/each}}
-				{{#each this.Detriments}}
-				<input type="hidden" class="detrimentName" value={{this.detriment}}>
-				<input type="hidden" class="detrimentWeight" value={{this.weight}}>
-				{{/each}}
-			</div>	
-			{{/each}}
-			</ul>
+				</ul>
 			</div>
  		</div>	
 	</div>
+</div>
 <div class="inputGrid ui four column stackable padded centered grid">	
 	<div class="column">
 		<div class="graphBox">
 			<canvas id="myChart" width="400" height="400"></canvas>
 		</div>	
 	</div>	
+</div>
+<div class="ui two column stackable padded centered grid">
+  <div class="column">  
+      <h3>Finished!</h3>    
+      <div class="ui violet big progress" data-percent="100" id="progBar">
+        <div class="bar"></div>
+        <div class="label">Progress</div>
+      </div>
+    </div>
 </div>
 
 <script type="text/javascript">
@@ -50,6 +60,7 @@ $(document).ready(function(){
 	var bestOption = [];
 	var ctx = $("#myChart");
 
+$('#progBar').progress();
 
 var myChart = new Chart(ctx, {
     type: 'pie',
@@ -144,7 +155,7 @@ var myChart = new Chart(ctx, {
 
 	calMax();
 	
-	$('#best')
+	$('#bestBox')
   	.transition('tada');
 	
 	myChart.update();
