Added password reset via email option

--- a/views/sign_in.handlebars
+++ b/views/sign_in.handlebars
@@ -17,5 +17,6 @@
 			<button type="submit" class="ui huge blue button">Log-In</button>	
 		</form>
 		<p><a href="/users/new">Create New Account</a></p>
+		<p><a href="/users/requestpass">Forgot Password</a></p>
 	</div>
 </div>
