--- a/views/sign_in.handlebars
+++ b/views/sign_in.handlebars
@@ -1,16 +1,17 @@
+<div class="ui container">
 <div class="ui one column stackable padded centered grid">
 	<div class="column">
 		<form class="ui form" action="/users/login" method="POST">
 			<div class="field">
 				<h4>Email:</h4>
 				<div class="ui huge input">		
-					<input type="text" id="emailInput" name="email">
+					<input type="text" id="emailInput" name="email" required>
 				</div>
 			</div>
 			<div class="field">
 				<h4>Password:</h4>
 				<div class="ui huge input">
-					<input type="text" id="passInput" name="password">
+					<input type="text" id="passInput" name="password" required>
 				</div>
 			</div>
 			<br>
@@ -19,4 +20,5 @@
 		<p><a href="/users/new">Create New Account</a></p>
 		<p><a href="/users/requestpass">Forgot Password</a></p>
 	</div>
+</div>
 </div>
