--- a/views/detriments.handlebars
+++ b/views/detriments.handlebars
@@ -1,3 +1,4 @@
+<div class="ui container">
  <div class="inputGrid ui one column stackable padded centered grid">
     <div class="inputBox column">
         <h2>What are the detriments for each option?</h2>
@@ -14,7 +15,7 @@
           <div class="field">
               <div style="width:400px" class="lgInput ui big icon input">
                 <input type="hidden" class="idInput" value={{this.id}}>
-                <input type="text" class="detrimentInput" name="detriment" placeholder="Input Detriment" size="50">
+                <input type="text" class="detrimentInput" name="detriment" placeholder="Input Detriment" size="50" required>
                 <i class="optionBtn inverted circular plus link icon"></i>
               </div>
           </div>
@@ -30,7 +31,7 @@
           <br>
           {{#each problems}}
            <form class="ui form" action="/problems/ratings/{{this.id}}" method="GET"> 
-            <button class="ui huge blue button">Go<i class="long arrow right icon"></i></button>
+            <button class="ui huge blue button" id="nextBtn">Go<i class="long arrow right icon"></i></button>
           </form>  
           {{/each}}
 
@@ -45,6 +46,7 @@
       </div>
     </div>
 </div>
+</div>
 
   
 
@@ -54,13 +56,21 @@ $(document).ready(function(){
 
   var clones = 0;
 
+  var inputNum = $('.masterField .replicate').length;
+
   $(".rating").rating();
 
   $('#progBar').progress();
 
+  if (inputNum > 0) {
+      document.getElementById("nextBtn").disabled = true;
+  }
+
   $(document).on('click', '.submitBtn', function() {
     
     clones++
+
+    inputNum++
 
     if (clones < 9) {   
 
@@ -74,19 +84,32 @@ $(document).ready(function(){
   })
 
   $(document).on('click', '.optionBtn', function() {
+
+    inputNum--
+
+    if (inputNum === 0) {
+        document.getElementById("nextBtn").disabled = false;
+    }
     
-    var currentRating = $(this).parentsUntil("form").nextAll(".quality").eq(0).rating('get rating');
+   var currentRating = $(this).parentsUntil("form").nextAll(".quality").eq(0).rating('get rating');
     console.log(currentRating);
   
    var thisDetriment = $(this).siblings('.detrimentInput').val();
    var thisWeight = $(this).parentsUntil("form").nextAll(".quality").eq(0).rating('get rating');
    var thisID = $(this).siblings('.idInput').val();
 
+   if (thisDetriment.length == 0) {
+       console.log('Enter input');
+       inputNum++
+   }
+   else {
+
     $.post('/detriments/create/' + thisDetriment + '/' + thisWeight + '/' + thisID, function(){
       console.log('benefit submitted');
     })
 
     $(this).closest("form").replaceWith("<h3><i>" + thisDetriment + "</i></h3>");
+   } 
 
   })
 })
