--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,10 +1,11 @@
+<div class="ui container">
 <div class="ui one column stackable padded centered grid">
 	<div class="column">
 		<form class="ui form" action="/problems/create" method="POST">
 			<div class="field">
 				<h2>Input Your Problem</h2>
 				<div class="ui big input">
-              		<input type="text" name="issue" placeholder="Input your problem">
+              		<input type="text" name="issue" placeholder="Input your problem" required>
             	</div>
             </div> 
 			<button type="submit" class="ui huge blue button">Go<i class="long arrow right icon"></i></button>
@@ -19,6 +20,7 @@
         <div class="label">Progress</div>
       </div>
     </div>
+</div>
 </div>
 
 <script type="text/javascript">
