--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -1,3 +1,4 @@
+<div class="ui container">
 <div class="ui one column stackable padded centered grid">
 	<div class="column">
 		<form class="ui form" action="/users/create" method="POST">
@@ -17,4 +18,5 @@
 			<button type="submit" class="ui huge blue button">Log-In</button>	
 		</form>
 	</div>
+</div>
 </div>
