--- a/views/processed.handlebars
+++ b/views/processed.handlebars
@@ -1,6 +1,8 @@
+<div class="ui container">
 <div class="ui one column stackable padded centered grid">
 	<div class="column">
 	<h2>An email with a password reset link has been sent to your address.</h2>	
 	<h2><a href="/">Go back to user log-in</a></h2>
 	</div>	
+</div>
 </div>
