--- a/views/requestpass.handlebars
+++ b/views/requestpass.handlebars
@@ -1,10 +1,11 @@
+<div class="ui container">
 <div class="ui four column stackable padded centered grid">
 	<div class="column">
 		<form class="ui form" action="/users/forget" method="POST">	
 
 				<h4>Please enter the email associated with your account:</h4>
 				<div class="ui huge input">
-					<input type="text" id="emailInput" name="email">
+					<input type="text" id="emailInput" name="email" required>
 				</div>	
 
 			<br>
@@ -12,4 +13,5 @@
 			<button type="submit" class="ui huge blue button">Send Request</button>	
 		</form>
 	</div>	
+</div>
 </div>
