--- a/views/reset.handlebars
+++ b/views/reset.handlebars
@@ -1,3 +1,4 @@
+<div class="ui container">
 <div class="ui four column stackable padded centered grid">
 	<div class="column">
 	{{#each users}}
@@ -5,7 +6,7 @@
 
 				<h4>Enter your new password:</h4>
 				<div class="ui huge input">
-					<input type="text" id="passInput" name="password">
+					<input type="text" id="passInput" name="password" required>
 				</div>	
 
 			<br>
@@ -14,4 +15,5 @@
 		</form>	
 	{{/each}}	
 	</div>	
+</div>
 </div>
