--- a/views/score.handlebars
+++ b/views/score.handlebars
@@ -1,3 +1,4 @@
+<div class="ui container">
 <div class="inputGrid ui one column stackable padded centered grid">
  	<div class="column">
  		<div class="resultBox">
@@ -49,6 +50,7 @@
         <div class="label">Progress</div>
       </div>
     </div>
+</div>
 </div>
 
 <script type="text/javascript">
