--- a/views/detriments.handlebars
+++ b/views/detriments.handlebars
@@ -67,6 +67,10 @@ $(document).ready(function(){
   }
 
   $(document).on('click', '.submitBtn', function() {
+
+    if (inputNum === 0) {
+        location.reload(true);
+    }
     
     clones++
 
@@ -89,6 +93,8 @@ $(document).ready(function(){
 
     if (inputNum === 0) {
         document.getElementById("nextBtn").disabled = false;
+      $('#nextBtn')
+      .transition('jiggle');
     }
     
    var currentRating = $(this).parentsUntil("form").nextAll(".quality").eq(0).rating('get rating');
