Added create user email match validation

--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -1,22 +1,59 @@
 <div class="ui container">
-<div class="ui one column stackable padded centered grid">
+<div class="ui two column stackable padded centered grid">
 	<div class="column">
-		<form class="ui form" action="/users/create" method="POST">
+		<form class="ui form">
 			<div class="field">
-				<h4>Email:</h4>
+				<h2>Please complete the following fields:</h2>
+				<h3>Your Email:</h3>
 				<div class="ui huge input">		
-					<input type="text" id="emailInput" name="email">
+					<input type="text" id="emailInput">
 				</div>
 			</div>
-			<div class="field">
-				<h4>Password:</h4>
+			<div class="field" id="validationForm">
+				<h3>Create Password:</h3>
 				<div class="ui huge input">
-					<input type="text" id="passInput" name="password">
+					<input type="text" id="passInput">
+				</div>
+				<h3>Retype to Confirm:</h3>
+				<div class="ui huge input">
+					<input type="text" id="validator">
 				</div>
 			</div>
 			<br>
-			<button type="submit" class="ui huge blue button">Log-In</button>	
+			<button type="button" id="submitNew" class="ui huge blue button">Log-In</button>	
+			<div class="field" id="misMatch">
+			
+			</div>	
 		</form>
 	</div>
 </div>
 </div>
+
+<script type="text/javascript">
+
+$(document).ready(function() {
+
+	$('#submitNew').on('click', function() {
+
+		var password = $('#passInput').val();
+		var validation = $('#validator').val();
+		var email = $('#emailInput').val();
+
+		console.log(password);
+		console.log(validation);
+
+		if (password === validation) {
+
+			$.post('/users/create/' + email + '/' + password, function() {
+				window.location.href="/problems";
+			})
+		}
+		else {
+
+			console.log('Mismatch');
+			$('#misMatch').html('<h4><font color="red">Passwords do not match. Try again.</font></h4>');
+		}
+	})	
+});
+
+</script>
