--- a/views/sign_in.handlebars
+++ b/views/sign_in.handlebars
@@ -1,24 +1,24 @@
 <div class="ui container">
-<div class="ui one column stackable padded centered grid">
+<div class="ui two column stackable padded centered grid">
 	<div class="column">
 		<form class="ui form" action="/users/login" method="POST">
 			<div class="field">
-				<h4>Email:</h4>
+				<h3>Email:</h3>
 				<div class="ui huge input">		
 					<input type="text" id="emailInput" name="email" required>
 				</div>
 			</div>
 			<div class="field">
-				<h4>Password:</h4>
+				<h3>Password:</h3>
 				<div class="ui huge input">
-					<input type="text" id="passInput" name="password" required>
+					<input type="password" id="passInput" name="password" required>
 				</div>
 			</div>
 			<br>
 			<button type="submit" class="ui huge blue button">Log-In</button>	
 		</form>
-		<p><a href="/users/new">Create New Account</a></p>
-		<p><a href="/users/requestpass">Forgot Password</a></p>
+		<h4><a href="/users/new">Create New Account</a></h4>
+		<h4><a href="/users/requestpass">Forgot Password</a></h4>
 	</div>
 </div>
 </div>
