Added heroku deployment settings

--- a/views/benefits.handlebars
+++ b/views/benefits.handlebars
@@ -3,7 +3,7 @@
     <div class="inputBox column">
         <h2>What are the benefits for each option?</h2>
         {{#each problems}}
-        <h3>Your current problem: {{this.problem}}</h3>
+        <h3>Your current problem: <i>"{{this.problem}}"</i></h3>
         {{/each}}
       {{#each options}}  
       <h2><u>{{this.option}}:</u></h2>
