--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,5 @@
 <div class="ui container">
-<div class="ui one column stackable padded centered grid">
+<div class="ui two column stackable padded centered grid">
 	<div class="column">
 		<form class="ui form" action="/problems/create" method="POST">
 			<div class="field">
