--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -12,11 +12,11 @@
 			<div class="field" id="validationForm">
 				<h3>Create Password:</h3>
 				<div class="ui huge input">
-					<input type="text" id="passInput">
+					<input type="password" id="passInput">
 				</div>
 				<h3>Retype to Confirm:</h3>
 				<div class="ui huge input">
-					<input type="text" id="validator">
+					<input type="password" id="validator">
 				</div>
 			</div>
 			<br>
