--- a/views/options.handlebars
+++ b/views/options.handlebars
@@ -4,8 +4,8 @@
 	<div class="masterField">
 	    {{#each problems}}
         	{{#if @last}}
-         		<h2>Problem: {{this.problem}}</h2>
-          		<h2>Add Options</h2>
+         		<h2>Problem: <i>"{{this.problem}}"</i></h2>
+          		<h2>What are your options?</h2>
 			<form class="replicate ui form">
         		<div class="field">
 					<div style="width:400px" class="ui big icon input">
