--- a/views/reset.handlebars
+++ b/views/reset.handlebars
@@ -6,7 +6,7 @@
 
 				<h4>Enter your new password:</h4>
 				<div class="ui huge input">
-					<input type="text" id="passInput" name="password" required>
+					<input type="password" id="passInput" name="password" required>
 				</div>	
 
 			<br>
