--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-<div class="ui inverted segment">
+<div class="ui inverted segment" id="navbar">
   <div class="ui inverted secondary pointing menu">
     {{#unless logged_in}}
     <h3 class="item">
